# credit-card-decision-dashboard

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 4a994c57972e_initial_card_catalog_schema.py  790e0ec1b9ad_add_card_drafts_review_queue.py  98facaaf107d_add_multiplier_label_to_earn_rates.py  a45d60514c16_add_indexes_to_foreign_key_columns.py  be0291c77f0a_add_points_per_100k_label_to_cards.py  d593910b187c_add_verdict_short_tag_to_cards.py
backend/: README.md  db.py  db_models.py  main.py  models.py
backend/data/: cards.json
backend/data/cards/: amex-gold.json  amex.json  csr.json  delta.json  venturex.json
backend/scripts/: drafts.py  seed_catalog.py  upsert.py
backend/services/: cards.py
backend/tests/: test_cards_api.py  test_smoke.py
frontend/: index.html  package-lock.json  package.json  tests.setup.ts  tsconfig.test.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: cards.ts
frontend/src/assets/: README.md
frontend/src/components/: CardPicker.tsx  CardSummaryCard.tsx  CompareSlot.tsx  CompareTray.tsx  ErrorBoundary.tsx  Footer.tsx  PageTabs.tsx
frontend/src/constants/: styles.ts
frontend/src/hooks/: useCompareList.ts
frontend/src/pages/: CardDetailPage.tsx  ComparePage.tsx  IssuerCardsPage.tsx  IssuersPage.tsx
frontend/src/types/: cards.ts
reference/: card-decision.html
tests/backend/: conftest.py  test_cards_api.py  test_drafts.py  test_seed_catalog.py  test_smoke.py  test_upsert.py
(+112 files in other folders)
