[project]
name = "credit-card-decision-dashboard"
version = "0.1.0"
description = "A web tool to help decide which credit cards to keep or downgrade"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]